--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
-    "heroicons": "^2.1.5",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
